<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_header_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/greeting_msg"
        app:layout_constraintBottom_toTopOf="@+id/profile_name"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_name"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>