<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/article_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="5dp">


        <RelativeLayout
            android:id="@+id/article_contianer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/details_article_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/details_article_publishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/details_article_image"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/arrow"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

            <TextView
                android:id="@+id/details_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_article_image"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:text="@string/greeting_msg"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_article_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_article_title"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/profile_picture" />

            <TextView
                android:id="@+id/details_article_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_article_author"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/profile_picture" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/open_website"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/background_dark"
        android:padding="20dp"
        android:text="@string/open_website" />
</LinearLayout>